finalising map function , report analysis , calndar functinality